PROJECT( SelectPathWidget )

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)

# For CMake
set(CMAKE_INCLUDE_CURRENT_DIR ON)

# Qt
FIND_PACKAGE( Qt5Widgets REQUIRED )
INCLUDE_DIRECTORIES( ${Qt5Widgets_INCLUDE_DIRS} )

# QTSJIS
FIND_PATH( QTSJIS_INCLUDES qtsjis.hpp )
INCLUDE_DIRECTORIES( ${QTSJIS_INCLUDES} )

# Target
INCLUDE_DIRECTORIES( "include" )

FILE( GLOB SRCS "src/*.cpp" )
FILE( GLOB QTUI_HEADERS "include/*.h" )
FILE( GLOB QTUI_SRCS "src/*.ui" )

QT5_WRAP_UI( QTUI_H_SRCS ${QTUI_SRCS} )
QT5_WRAP_CPP( QTUI_HEADERS_MOC ${QTUI_HEADERS}) 

ADD_LIBRARY( SelectPathWidget STATIC ${SRCS} ${QTUI_H_SRCS} ${QTUI_HEADERS_MOC} )

# INSTALL
INSTALL( TARGETS SelectPathWidget DESTINATION lib )